--- a/Loginpage.resx
+++ b/Loginpage.resx
@@ -173,8 +173,8 @@
         NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQMAAAAETmFtZQRTaXpl
         CExvY2F0aW9uAQQEE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAA
         AAIAAAAGBAAAAAVQaG9uZQX7////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAA
-        CAgDAAAAgQAAABYAAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAC8AAAA
-        DgEAAAs=
+        CAgDAAAAgQAAABYAAAAF+v///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAC5AAAA
+        FwEAAAs=
 </value>
   </data>
   <data name="loginBtn.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
